Added first jellyfin routes issue #34
